// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить компонент PromoFeatures c ошибкой 1`] = `
<div
  className="PromoFeatures"
>
  <div
    className="PromoFeatures__block"
  >
    <div
      className="PromoFeatures__row PromoFeatures__row_main"
    >
      <div
        className="PromoFeatures__title"
      >
        Промокоды
        <HoveredTooltip
          defaultPadding={true}
          directions={
            Array [
              "bottom-left",
              "bottom-center",
              "bottom-right",
              "top-left",
              "top-center",
              "top-right",
              "right-top",
              "right-center",
              "right-bottom",
              "left-top",
              "left-center",
              "left-bottom",
            ]
          }
          isVisible={false}
          mainOffset={10}
          popupTheme="dark"
          secondaryOffset={-10}
          showTimeout={200}
          tooltipContent={
            <div
              className="PromoFeatures__tooltip"
            >
              После активации промокода выберите объявление, к которому хотите его подключить, — опция будет бесплатной или со скидкой.
            </div>
          }
        >
          <div
            className="PromoFeatures__question-wrap"
          >
            <IconSvg
              className="PromoFeatures__question"
              id="svgID"
              size="24"
            />
          </div>
        </HoveredTooltip>
      </div>
      <div
        className="PromoFeatures__input-wrap"
      >
        <TextInput
          className="PromoFeatures__input"
          error="Такого промокода не существует"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder=""
          radius="r8"
          size="m"
          type="text"
          value="promo-code"
          valueProcessor={[Function]}
        />
      </div>
      <Button
        className="PromoFeatures__activate"
        color="blue"
        disabled={true}
        onClick={[Function]}
        size="m"
        type="button"
        width="default"
      >
        Активировать
      </Button>
    </div>
  </div>
</div>
`;

exports[`должен отрендерить компонент PromoFeatures без доступных фич 1`] = `
<div
  className="PromoFeatures"
>
  <div
    className="PromoFeatures__block"
  >
    <div
      className="PromoFeatures__row PromoFeatures__row_main"
    >
      <div
        className="PromoFeatures__title"
      >
        Промокоды
        <HoveredTooltip
          defaultPadding={true}
          directions={
            Array [
              "bottom-left",
              "bottom-center",
              "bottom-right",
              "top-left",
              "top-center",
              "top-right",
              "right-top",
              "right-center",
              "right-bottom",
              "left-top",
              "left-center",
              "left-bottom",
            ]
          }
          isVisible={false}
          mainOffset={10}
          popupTheme="dark"
          secondaryOffset={-10}
          showTimeout={200}
          tooltipContent={
            <div
              className="PromoFeatures__tooltip"
            >
              После активации промокода выберите объявление, к которому хотите его подключить, — опция будет бесплатной или со скидкой.
            </div>
          }
        >
          <div
            className="PromoFeatures__question-wrap"
          >
            <IconSvg
              className="PromoFeatures__question"
              id="svgID"
              size="24"
            />
          </div>
        </HoveredTooltip>
      </div>
      <div
        className="PromoFeatures__input-wrap"
      >
        <TextInput
          className="PromoFeatures__input"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder=""
          radius="r8"
          size="m"
          type="text"
          value=""
          valueProcessor={[Function]}
        />
      </div>
      <Button
        className="PromoFeatures__activate"
        color="blue"
        disabled={false}
        onClick={[Function]}
        size="m"
        type="button"
        width="default"
      >
        Активировать
      </Button>
    </div>
  </div>
</div>
`;

exports[`должен отрендерить компонент PromoFeatures со списком доступных промофич 1`] = `
<div
  className="PromoFeatures"
>
  <div
    className="PromoFeatures__block"
  >
    <div
      className="PromoFeatures__row PromoFeatures__row_main"
    >
      <div
        className="PromoFeatures__title"
      >
        Промокоды
        <HoveredTooltip
          defaultPadding={true}
          directions={
            Array [
              "bottom-left",
              "bottom-center",
              "bottom-right",
              "top-left",
              "top-center",
              "top-right",
              "right-top",
              "right-center",
              "right-bottom",
              "left-top",
              "left-center",
              "left-bottom",
            ]
          }
          isVisible={false}
          mainOffset={10}
          popupTheme="dark"
          secondaryOffset={-10}
          showTimeout={200}
          tooltipContent={
            <div
              className="PromoFeatures__tooltip"
            >
              После активации промокода выберите объявление, к которому хотите его подключить, — опция будет бесплатной или со скидкой.
            </div>
          }
        >
          <div
            className="PromoFeatures__question-wrap"
          >
            <IconSvg
              className="PromoFeatures__question"
              id="svgID"
              size="24"
            />
          </div>
        </HoveredTooltip>
      </div>
      <div
        className="PromoFeatures__input-wrap"
      >
        <TextInput
          className="PromoFeatures__input"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder=""
          radius="r8"
          size="m"
          type="text"
          value=""
          valueProcessor={[Function]}
        />
      </div>
      <Button
        className="PromoFeatures__activate"
        color="blue"
        disabled={false}
        onClick={[Function]}
        size="m"
        type="button"
        width="default"
      >
        Активировать
      </Button>
    </div>
    <div
      className="PromoFeatures__features"
    >
      <div
        className="PromoFeatures__feature PromoFeatures__row"
        key="0"
      >
        <div
          className="PromoFeatures__feature-title-count"
        >
          <div
            className="PromoFeatures__feature-title"
          >
            Поднятие в поиске
          </div>
          <div
            className="PromoFeatures__feature-count"
          >
            10 шт.
          </div>
        </div>
        <div
          className="PromoFeatures__feature-label"
        >
          99 ₽
        </div>
        <div
          className="PromoFeatures__feature-label"
        >
          Активно до 
          12:31, 6 нояб. 2021
        </div>
      </div>
      <div
        className="PromoFeatures__feature PromoFeatures__row"
        key="1"
      >
        <div
          className="PromoFeatures__feature-title-count"
        >
          <div
            className="PromoFeatures__feature-title"
          >
            История по VIN
          </div>
          <div
            className="PromoFeatures__feature-count"
          >
            1 шт.
          </div>
        </div>
        <div
          className="PromoFeatures__feature-label"
        >
          Скидка 50%
        </div>
      </div>
    </div>
  </div>
  <div
    className="PromoFeatures__block"
  >
    <div
      className="PromoFeatures__row"
    >
      <div
        className="PromoFeatures__title"
      >
        Кэшбэк
        <HoveredTooltip
          defaultPadding={true}
          directions={
            Array [
              "bottom-left",
              "bottom-center",
              "bottom-right",
              "top-left",
              "top-center",
              "top-right",
              "right-top",
              "right-center",
              "right-bottom",
              "left-top",
              "left-center",
              "left-bottom",
            ]
          }
          isVisible={false}
          mainOffset={10}
          popupTheme="dark"
          secondaryOffset={-10}
          showTimeout={200}
          tooltipContent={
            <div
              className="PromoFeatures__tooltip"
            >
              Начисляем кэшбэк 10%, если в прошлом месяце вы потратили больше 25 тыс. руб. Максимальный кэшбэк — 10 тыс. руб.
            </div>
          }
        >
          <div
            className="PromoFeatures__question-wrap"
            data-qa="PromoFeatures__cashback"
          >
            <IconSvg
              className="PromoFeatures__question"
              id="svgID"
              size="24"
            />
          </div>
        </HoveredTooltip>
      </div>
      <div
        className="PromoFeatures__cashback"
      >
        150 ₽
      </div>
    </div>
  </div>
</div>
`;
